--- a/index.html
+++ b/index.html
@@ -20,21 +20,14 @@
   <section class="content">
     <h1>Pokedex</h1>
     <ol class="pokemons">
-      <li class="pokemon">
-        <span class="number">#001</span>
-        <span class="name">Bulbasaur</span>
-        <div class="detail">
-          <ol class="types">
-            <li class="type">grass</li>
-            <li class="type">poison</li>
-          </ol>
-          <img src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/other/dream-world/1.svg" alt="Bulbasaur">
-        </div>
-      </li>
+      
     </ol>
   </section>
+  <div class="pagination">
+    <button type="button">Load More</button>
+  </div>
 
-  <script src="./assets/js/main.js"></script>
+  <script src="./assets/js/main.js" type="module"></script>
 </body>
 
 </html>
